fix issue related with overlaping footer

--- a/src/app/general/footer/footer.component.css
+++ b/src/app/general/footer/footer.component.css
@@ -1,18 +1,16 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
 .footer {
   position: absolute;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .content-footer {
@@ -24,6 +22,7 @@ body {
   font-size: 12px;
   text-align: center;
 }
+
 .content-footer p a {
 	color: inherit;
 	font-weight: bold;
