--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,24 +1,33 @@
 /* General */
 html {
-  height: 100%
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-  height: 100%;
-  font-family: Helvetica, sans-serif;
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
   background-color: white;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-body > .container {
-  padding: 60px 15px 0;
-}
-.container .text-muted {
-  margin: 20px 0;
+.wrapper {
+  margin: 0 auto;
+  padding-top: 64px;
+  max-width: 840px;
+  width: 94%;
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+.wrapper .root {
+  padding-bottom: 20px;
 }
 
 code {
